--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   },
   "dependencies": {
     "@melonjs/debug-plugin": "^14.5.0",
+    "body-parser": "^1.20.2",
     "core-js": "^3.30.0",
     "css-loader": "^6.7.3",
-    "melonjs": "^15.1.0",
+    "express": "^4.18.2",
+    "melonjs": "^15.1.1",
+    "mongoose": "^7.0.4",
     "style-loader": "^3.3.2"
   }
 }
